# LLMSAEMemorization

./: aggregate_sae_features_mem_vs_nonmem.ipynb  analyze_sae_activations.ipynb  basic_loading_and_analysing.ipynb  demo_feature_dashboards.html  inference.py  main.py  memorization_results_L500_O100.csv  memorization_results_L50_O50.csv  plot_feature_differences_mem_nonmen.py  pyproject.toml  view_mem_nonmem_data.py  view_perfect_matches.py
aggregate_feature_comparisons/: feature_counts_layer_0.csv  feature_counts_layer_1.csv  feature_counts_layer_10.csv  feature_counts_layer_11.csv  feature_counts_layer_12.csv  feature_counts_layer_13.csv  feature_counts_layer_14.csv  feature_counts_layer_15.csv  feature_counts_layer_16.csv  feature_counts_layer_17.csv  feature_counts_layer_18.csv  feature_counts_layer_19.csv  feature_counts_layer_2.csv  feature_counts_layer_20.csv  feature_counts_layer_21.csv  feature_counts_layer_22.csv  feature_counts_layer_23.csv  feature_counts_layer_24.csv  feature_counts_layer_25.csv  feature_counts_layer_26.csv  feature_counts_layer_27.csv  feature_counts_layer_28.csv  feature_counts_layer_29.csv  feature_counts_layer_3.csv  feature_counts_layer_30.csv  feature_counts_layer_31.csv  feature_counts_layer_4.csv  feature_counts_layer_5.csv  feature_counts_layer_6.csv  feature_counts_layer_7.csv  feature_counts_layer_8.csv  feature_counts_layer_9.csv
aggregate_top_feature_comparisons/: feature_counts_layer_0.csv  feature_counts_layer_1.csv  feature_counts_layer_10.csv  feature_counts_layer_11.csv  feature_counts_layer_12.csv  (+27 more)
