[project]
name = "llmsaememorization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autoreload>=0.1.2",
    "datasets==2.17.1",
    "huggingface-hub==0.23.2",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pip>=25.1.1",
    "plotly[express]==5.19.0",
    "sae-lens>=3.11.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformer-lens==1.14.0",
    "transformers>=4.46.0",
    "typeguard>=4.4.2",
]
